# TMSWhatever

./: .gitmodules  README.md
Arduino/DroneShooter/: DroneShooter.ino
Arduino/DroneShooterGun/: DroneShooterGun.ino
Arduino/DroneShooterSpawn/: DroneShooterSpawn.ino
Arduino/GunSound/: GunSound.ino
Arduino/Libs/Adafruit_NeoPixel/Adafruit_NeoPixel-master/examples/simple/: simple.ino
Arduino/SerialTest/: SerialTest.ino
Arduino/WireTest/WireTest/: WireTest.ino
Arduino/servoControl_new/: servoControl_new.ino
Arduino/spawnPoint/: spawnPoint.ino
Arduino/spawnPoint_manual/: spawnPoint_manual.ino
AudioServer/: make.sh  soundServer  soundServer.cpp  testsnd
Crazyflie/crazyflie-firmware-master/src/modules/src/: commander.c
Crazyflie/crazyflie-firmware-master_non_buildable/src/modules/src/: commander.c
DroneCtrl/: CMakeLists.txt
DroneCtrl/examples/basic/: DroneController.cpp  DroneController.h  basictest.cpp
DroneCtrl/include/drones/ardrone2/: ardrone2.h
DroneCtrl/src/drones/ardrone2/: ardrone2.cpp  controllink.cpp
DroneCtrl/src/drones/ardrone2/atcommands/: atcommand.cpp  atcommand.h
DroneCtrl/src/drones/ardrone2/video/: videomanager.cpp
node-copter/: gamepad-test.js  script.js
udp_server/: Client  Play  Server  play_audio.cpp  udp_client.cpp  udp_server.cpp
website/: index.html
